--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,8 +16,9 @@ jobs:
     - name: configure
       run: ./configure
     - name: make
-      run: make
+      run: make main
     - name: make check
       run: make check
     - name: make distcheck
       run: make distcheck
+
