--- a/Startwindow/CMakeLists.txt
+++ b/Startwindow/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(test1 VERSION 0.1 LANGUAGES CXX)
+project(Startwindow VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -12,41 +12,39 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 
-set(TS_FILES test1_de_DE.ts)
+set(TS_FILES Startwindow_de_DE.ts)
 
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
-        frau.gif
-        feuerwerk1.gif
-        feuerwerk2.gif
-        pop.h
-        pop.cpp
+        test.h
+        test.cpp
+        test.ui
         ${TS_FILES}
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(test1
+    qt_add_executable(Startwindow
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET test1 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET Startwindow APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 
     qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 else()
     if(ANDROID)
-        add_library(test1 SHARED
+        add_library(Startwindow SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(test1
+        add_executable(Startwindow
             ${PROJECT_SOURCES}
         )
     endif()
@@ -54,9 +52,9 @@ else()
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
 
-target_link_libraries(test1 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Startwindow PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(test1 PROPERTIES
+set_target_properties(Startwindow PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -64,10 +62,10 @@ set_target_properties(test1 PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS test1
+install(TARGETS Startwindow
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(test1)
+    qt_finalize_executable(Startwindow)
 endif()
