--- a/inizialiseGame/CMakeLists.txt
+++ b/inizialiseGame/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(Chess_Application VERSION 0.1 LANGUAGES CXX)
+project(inizialiseGame VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -14,38 +14,44 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
         main.cpp
-        widget.cpp
-        widget.h
-        widget.ui
-        Yasuo.jpg
+        inizialisegame.cpp
+        inizialisegame.h
+        inizialisegame.ui
+
+        testside.h
+        testside.cpp
+        testside.ui
+
+        assetsList.qrc
+
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(Chess_Application
+    qt_add_executable(inizialiseGame
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET Chess_Application APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET inizialiseGame APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(Chess_Application SHARED
+        add_library(inizialiseGame SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(Chess_Application
+        add_executable(inizialiseGame
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(Chess_Application PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(inizialiseGame PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(Chess_Application PROPERTIES
+set_target_properties(inizialiseGame PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -53,10 +59,10 @@ set_target_properties(Chess_Application PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS Chess_Application
+install(TARGETS inizialiseGame
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(Chess_Application)
+    qt_finalize_executable(inizialiseGame)
 endif()
